# portfolio-projects

./: README.md
Kbonaci/kbonaci/: Cargo.toml
Kbonaci/kbonaci/benches/: fib.rs  mat.rs
Kbonaci/kbonaci/src/: big_fl.rs  big_int.rs  lib.rs  main.rs  mat.rs
Kbonaci/kbonaci/tests/: big_int.rs  kbonnaci.rs  mat.rs
Voxel-engine/: Cargo.toml  README.md
Voxel-engine/shaders/: atlas.wgsl  compute.wgsl  lines.wgsl  rect_rasterize.wgsl  shader.wgsl  textures.wgsl
Voxel-engine/src/: buffer.rs  gui_manager.rs  lib.rs  main.rs  prelude.rs  state.rs  texture.rs  utils.rs
Voxel-engine/src/pipelines/: atlas.rs  background.rs  compute.rs  fonts.rs  lines.rs  mod.rs  rect_rasterize.rs  rect_texture.rs  rectangle.rs  voxel.rs
Voxel-engine/tests/: mod.rs  stress.rs
Voxel-engine/wgpu/: .deny.toml  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  clippy.toml  codecov.yml  renovate.json  rust-toolchain.toml  shell.nix  taplo.toml  typos.toml
Voxel-engine/wgpu/.cargo/: config.toml
Voxel-engine/wgpu/.config/: nextest.toml
Voxel-engine/wgpu/.github/: CODEOWNERS  pull_request_template.md
Voxel-engine/wgpu/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  other.md
Voxel-engine/wgpu/.github/install-mesa-action/: action.yml
Voxel-engine/wgpu/.github/workflows/: ci.yml  cts.yml  docs.yml  generate.yml  lazy.yml  publish.yml  shaders.yml
Voxel-engine/wgpu/benches/: Cargo.toml  README.md
Voxel-engine/wgpu/cts_runner/: Cargo.toml  revision.txt  test.lst
Voxel-engine/wgpu/cts_runner/examples/: hello-compute.js
Voxel-engine/wgpu/cts_runner/src/: bootstrap.js  main.rs
Voxel-engine/wgpu/cts_runner/tests/: integration.rs
Voxel-engine/wgpu/deno_webgpu/: 00_init.js  01_webgpu.js  02_surface.js  Cargo.toml  LICENSE.md  README.md  adapter.rs  bind_group.rs  bind_group_layout.rs  buffer.rs  byow.rs  command_buffer.rs  command_encoder.rs  compute_pass.rs  compute_pipeline.rs  device.rs  error.rs  lib.rs  pipeline_layout.rs  query_set.rs  queue.rs  render_bundle.rs  render_pass.rs  render_pipeline.rs  sampler.rs  shader.rs  surface.rs  texture.rs  webgpu.idl  webidl.rs
Voxel-engine/wgpu/docs/: release-checklist.md  review-checklist.md  testing.md
Voxel-engine/wgpu/docs/api-specs/: ray_tracing.md
Voxel-engine/wgpu/examples/: README.md
Voxel-engine/wgpu/examples/features/: Cargo.toml
Voxel-engine/wgpu/lock-analyzer/: Cargo.toml
Voxel-engine/wgpu/lock-analyzer/src/: main.rs
Voxel-engine/wgpu/naga/: .gitattributes  Cargo.toml  README.md  build.rs
Voxel-engine/wgpu/naga-cli/: Cargo.toml
Voxel-engine/wgpu/naga/.cargo/: config.toml
Voxel-engine/wgpu/naga/fuzz/: Cargo.toml  build.rs
Voxel-engine/wgpu/naga/hlsl-snapshots/: Cargo.toml
Voxel-engine/wgpu/naga/src/: as_diagnostic_file_path.rs  diagnostic_filter.rs  error.rs  lib.rs  non_max_u32.rs  racy_lock.rs  span.rs
Voxel-engine/wgpu/naga/xtask/: .gitignore  Cargo.toml
Voxel-engine/wgpu/player/: Cargo.toml  README.md
Voxel-engine/wgpu/player/src/: lib.rs
Voxel-engine/wgpu/tests/: Cargo.toml
Voxel-engine/wgpu/tests/src/: config.rs  copy_texture_to_buffer.wgsl  expectations.rs  image.rs  init.rs  isolation.rs  lib.rs  native.rs  params.rs  poll.rs  report.rs  run.rs
Voxel-engine/wgpu/wgpu/: Cargo.toml  build.rs
Voxel-engine/wgpu/wgpu-core/: Cargo.toml  build.rs
Voxel-engine/wgpu/wgpu-core/src/: binding_model.rs  conv.rs  error.rs  global.rs  hal_api.rs  hash_utils.rs  hub.rs  id.rs  identity.rs  instance.rs  lib.rs  pipeline.rs  pipeline_cache.rs  pool.rs  present.rs  ray_tracing.rs  registry.rs  resource.rs  scratch.rs  snatch.rs  storage.rs  validation.rs  weak_vec.rs
Voxel-engine/wgpu/wgpu-hal/: Cargo.toml  build.rs
Voxel-engine/wgpu/wgpu-hal/examples/: raw-gles.rs
Voxel-engine/wgpu/wgpu-hal/src/: lib.rs  (+1 more)
Voxel-engine/wgpu/wgpu-info/: Cargo.toml  README.md
Voxel-engine/wgpu/wgpu-macros/: Cargo.toml
Voxel-engine/wgpu/wgpu-types/: Cargo.toml
Voxel-engine/wgpu/xtask/: Cargo.toml
heron visualizer/: .gitignore  Cargo.toml  README.md
heron visualizer/assets/shaders/: compile.py  fractal_visualizer.wgsl  heron.glsl
heron visualizer/cpu_visualize/: Cargo.toml  README.md
heron visualizer/cpu_visualize/src/: main.rs
heron visualizer/src/: main.rs
initerse/Old lost Initerse git/: Cargo.toml
initerse/bevy_2d - Exca/: .gitignore  Cargo.toml  README.md
initerse/bevy_2d - Exca/.cargo/: config.toml
initerse/bevy_2d - Exca/bevy_prototype_lyon/: Cargo.toml
initerse/bevy_2d - Exca/docs/: Buildings.md  Dev roadmap.md  Planets.md
initerse/bevy_2d - Exca/src/: camera.rs  helpers.rs  main.rs  prelude.rs  saves.rs  widget.rs
initerse/bevy_ai/: Cargo.toml  agent.md  implementation_plan_destroy_and_hotbar.md  prev_implementations.md  todo.md
initerse/bevy_ai/.cargo/: config.toml
initerse/bevy_ai/saves/: save.json
initerse/bevy_ai/src/: animation.rs  building.rs  camera.rs  combat.rs  config_screen.rs  connection.rs  entity.rs  grid.rs  interaction.rs  main.rs  menu.rs  pause_menu.rs  save_load.rs  ui.rs  world_config.rs
initerse/bevy_voxel/: Cargo.toml
initerse/bevy_voxel/src/: build.rs  camera.rs  main.rs  world.rs
initerse/bevy_voxel_raycaster/: .gitignore  Cargo.toml  README.md  renderdoc perf.csv
initerse/bevy_voxel_raycaster/.cargo/: config.toml
initerse/bevy_voxel_raycaster/engine/: Cargo.toml
initerse/bevy_voxel_raycaster/world/: Cargo.toml
initerse/easy-wgpu/: Cargo.toml  README.md  rustc-ice-2024-09-29T12_45_37-23684.txt  rustc-ice-2024-09-29T12_45_38-14896.txt
initerse/easy-wgpu/shaders/: gravity.wgsl  lines.wgsl  particles_raster.wgsl  shader.wgsl
initerse/easy-wgpu/src/: buffer.rs  gui_manager.rs  lib.rs  main.rs  state.rs  texture.rs
initerse/easy-wgpu/tests/: gravity.rs  mod.rs  rect_text.rs  stress.rs
initerse/macroquad/: Cargo.toml  README.md
initerse/macroquad/src/: lib.rs  tiles.rs  title_screen.rs  ui.rs
nannou-compute-particles/: Cargo.toml  README.md
nannou-compute-particles/shaders/: cs.wgsl
nannou-compute-particles/src/: bevy.rs  main.rs  nannou.rs
(+1385 files in other folders)
