[package]
name = "easy-wgpu"
version = "0.1.0"
edition = "2021"

[features]
default = []
testing = []

[dependencies]
winit = { version = "0.30.9", features = [
    "rwh_05",
    "rwh_06",
    "wayland",
    "x11",
], default-features = true }
env_logger = "0.11.8"
log = "0.4.27"
wgpu = { version = "25.0.0", default-features = true, features = [
    "dx12",
    "wgsl",
    "vulkan",
] }
pollster = "0.4.0"
bytemuck = { version = "1.23.1", features = ["derive"] }
anyhow = "1.0.98"
# wgpu-profiler = "0.18.0"
flume = "0.11.1"
encase = "0.11.0"
ttf-parser = "0.25.1"
cgmath = "0.18.0"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg"]

# Flamegraph profile
[profile.flame]
inherits = "release"
debug = true
