[package]
name = "kbonaci"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
# divan = "0.1.21"
# criterion = "0.7.0"


[[bench]]
name = "fib"
harness = false
[[bench]]
name = "mat"
harness = false

[dependencies]
astro-float = "0.9.5"
faer = { version = "0.22.6", default-features = false, features = ["std", "perf-warn"] }
nano-gemm = "0.1.3"
# glam = {version="0.30.5", features=["fast-math"]}
# ndarray = "0.16.1"
num-bigint = "0.4.6"
num-integer = "0.1.46"
simple-plot = "0.1.2"

[profile.release]
opt-level = 3
debug = true
lto = true

[profile.bench]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"
