[package]
name = "Bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
iyes_perf_ui = "0.3.0"
noise = {version="0.9.0", features=["std"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[profile.release]
debug = true

