[workspace]
resolver = "3"
members = ["engine", "world"]


# [dependencies]
# noise = { version = "0.9.0", features = ["std"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[profile.release]
debug = true

[workspace.dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy = { version = "0.16.1", features = ["file_watcher"] }
image = "0.25.6"
rand = "0.9.2"
bevy_app_compute = "0.16"


