[package]
name = "initerse"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
hashbrown = "0.15.2"
macroquad = "0.4.14"
noise = "0.9.0"
rand = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
toml = "0.8.19"
yakui = "0.3.0"
yakui-macroquad = "0.4.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.dbg]
inherits = "dev"
opt-level = 0
[profile.dbg.package."*"]
opt-level = 0

[profile.release]
debug = true
