[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
noise = { version = "0.9.0", features = ["std"] }
bevy = { workspace = true}
log = {workspace = true}
# image = "0.25.6"
rand = {workspace = true}
divan = "0.1.21"
dhat = "*"
dot_vox = "5.1.1"


[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling


[[bench]]
name = "main"
harness = false
